--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "braingames",
+  "name": "brain-games-mserov",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+  "brain-games": "dist/bin/brain-games.js"
+  },
+  "files": [
+   "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "babel-node": "babel-node"
+    "babel-node": "babel-node",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
