--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "brain-games-mserov",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "",
   "main": "dist/index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
