--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-mserov",
-  "version": "3.1.15",
+  "version": "3.1.16",
   "description": "",
   "main": "dist/index.js",
   "bin": {
@@ -25,6 +25,7 @@
   "author": "Mikhail Serov",
   "license": "ISC",
   "dependencies": {
+    "hexlet-pairs": "^1.0.5",
     "readline-sync": "*"
   },
   "devDependencies": {
